--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <h2>🔧 What is Git?</h2>
     <p>Git is a distributed version control system used to track changes in source code during software development.</p>
     <ul>
-      <li>🌀 Fast local operations</li>
-      <li>🌿 Easy branching & merging</li>
-      <li>📜 Full history of every change</li>
+      <li>🌀 A distributed version control system</li>
+      <li>🌿 Tracks source code changes</li>
+      <li>📜 Supports team collaboration</li>
     </ul>
   </section>
 
@@ -39,9 +39,21 @@
     <h2>🌐 What is GitHub?</h2>
     <p>GitHub is a cloud-based hosting service for Git repositories. It adds collaboration tools like issues, pull requests, and wikis.</p>
     <ul>
-      <li>☁️ Host remote repositories</li>
-      <li>👥 Team collaboration tools</li>
+      <li>☁️ Host remote repositories [cloud-based]</li>
+      <li>👥 Features: PRs, Issues, CI/CD</li>
       <li>🔓 Open-source and private projects</li>
+    </ul>
+  </section>
+
+  <section class="section" id="github" data-aos="fade-left">
+    <h2>🌐 Common Git Terms</h2>
+    <ul>
+      <li>📁 Repository: A code folder (project container)</li>
+      <li>🌿 Branch: A separate line of development</li>
+      <li>📥 Clone: Local copy of a repository</li>
+      <li>💾 Commit: A saved change with a message</li>
+      <li>🔀 Merge: Combining branches or changes</li>
+      <li>📤 Push / 📥 Pull: Sync with remote GitHub</li>
     </ul>
   </section>
 
@@ -67,6 +79,15 @@ git pull             # ⬇️ Sync changes
       <li>📬 Open a Pull Request</li>
       <li>✅ Merge to `main`</li>
     </ol>
+  </section>
+
+  <section class="section" id="github" data-aos="fade-left">
+    <h2>🌐 How teams use Github</h2>
+    <ul>
+       <li>📬 Pull Requests (PRs): Propose and discuss changes before merging</li>
+       <li>🕵️‍♂️ Code Review: Collaboratively review code for quality and issues</li>
+       <li>🤖 Automation and CI/CD: Automatically build, test, and deploy code</li>
+    </ul>
   </section>
 
   <section class="section" id="best-practices" data-aos="fade-up">
