--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </nav>
 
   <header class="hero" data-aos="fade-down">
-    <h1>🐙 Git & GitHub 101</h1>
-    <p>🚀 Master Version Control for Modern Development</p>
+    <h1>🐙 Code Collab</h1>
+    <p>🚀 Concepts of Git & GitHub</p>
   </header>
 
   <section class="section" id="git" data-aos="fade-up">
