--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 </nav>
 
   <header class="hero" data-aos="fade-down">
-    <h1>🐙 Code Collab</h1>
+    <h1>🐙 Code Collaboration</h1>
     <p>🚀 Concepts of Git & GitHub</p>
+    <h6>👨‍💻 Shaheer Uddin Ahmed</h6>
   </header>
 
   <section class="section" id="git" data-aos="fade-up">
