--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header class="hero" data-aos="fade-down">
     <h1>🐙 Code Collaboration</h1>
     <p>🚀 Concepts of Git & GitHub</p>
-    <h6>👨‍💻 Shaheer Uddin Ahmed</h6>
+    <p>👨‍💻 Shaheer</p>
   </header>
 
   <section class="section" id="git" data-aos="fade-up">
